Gave myself recognition on the website

--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,9 @@
 
     <!-- Load in the CSS file -->
     <link rel="stylesheet" type="text/css" href="css/contact.css">
+
+    <!-- Load in the javascript file -->
+    <script language="javascript" type="text/javascript" src="js/contact.js"></script>
 </head>
 
 <body id="pageone" class="posRel width100 height100 overflowXHidden backColBackGround marg0 pad0">
@@ -101,6 +104,14 @@
 
 <!-- Footer -->
 <div id="footer" class="posFix"></div>
+
+<!-- Watermark -->
+<div class="posFix colRed amaranth rightText" style="bottom: 24px;right: 15px;font-size: 12px;">
+    <div>Website Designed and Created by</div>
+    <a href="#"><div style="font-size: 16px;">Varun Shivakumar</div></a>
+</div>
+
+
 </body>
 </html>
 
