--- a/footer.html
+++ b/footer.html
@@ -1,38 +1,37 @@
 <!-- Footer -->
-    <div class="shadowTop" style="z-index:1000;">
-        <div style="width: 960px; margin: 0 auto;">
-            <div class="posRel centerDiv" style="width: 90%; height: 80px;">
-                <div class="posRel inlineBlock width100 centerText adam colRed fontSize18" style="line-height: 80px;">
+<div class="shadowTop" style="z-index:1000;">
+    <div id="footerBar" class="centerDiv" style="width: 960px;">
+        <div class="posRel centerDiv" style="width: 90%; height: 80px;">
+            <div class="posRel inlineBlock width100 centerText adam colRed fontSize18" style="line-height: 80px;">
 
-                    <div class="inlineBlock posAbs" style="left: -10px;">
+                <div class="inlineBlock posAbs" style="left: -10px;">
 
-                        <!-- Link to Sigma Phi Delta Home Page -->
-                        <a href="http://www.sigmaphidelta.org"><div class="icon z2 inlineBlock flaticon-castle colWhite"></div></a>
+                    <!-- Link to Sigma Phi Delta Home Page -->
+                    <a href="http://www.sigmaphidelta.org"><div class="icon z2 inlineBlock flaticon-castle colWhite"></div></a>
 
-                        <!-- Link to SBU CEAS -->
-                        <a href="http://www.stonybrook.edu/commcms/ceas/">
-                            <div class="z2 inlineBlock posRel vertAlignMid overflowHidden" style="height: 22px; width: 22px; bottom: 2px;margin: 0 20px;">
-                                <img src="images/symbols/sbu1.png" height="22px" class="vertAlignTop colorRed" />
-                            </div>
-                        </a>
-                    </div>
-
-                    <span style="margin: 0 20px;">&middot;</span>
-                    THE PREMIER INTERNATIONAL
-                    <span class="posRel vertAlignMid" style="font-size: 38px;top: 2px; padding: 0 5px;">&Sigma;&Phi;&Delta;</span>
-                    FRATERNITY OF ENGINEERS
-                    <span style="margin: 0 20px;">&middot;</span>
-
-                    <div class="inlineBlock posAbs" style="right: 10px;">
-
-                        <!-- Link to Facebook -->
-                        <a href="https://www.facebook.com/spdbetaeta/?fref=ts"><div class="icon z2 inlineBlock flaticon-facebook55 colWhite"></div></a>
-
-                        <!-- Link to Instagram -->
-                        <a href="https://www.instagram.com/spdbh/"><div class="icon z2 inlineBlock flaticon-instagram16 colWhite"></div></a>
-                    </div>
+                    <!-- Link to SBU CEAS -->
+                    <a href="http://www.stonybrook.edu/commcms/ceas/">
+                        <div class="z2 inlineBlock posRel vertAlignMid overflowHidden" style="height: 22px; width: 22px; bottom: 2px;margin: 0 20px;">
+                            <img src="images/symbols/sbu1.png" height="22px" class="vertAlignTop colorRed" />
+                        </div>
+                    </a>
                 </div>
 
+                <span style="margin: 0 20px;">&middot;</span>
+                THE PREMIER INTERNATIONAL
+                <span class="posRel vertAlignMid" style="font-size: 38px;top: 2px; padding: 0 5px;">&Sigma;&Phi;&Delta;</span>
+                FRATERNITY OF ENGINEERS
+                <span style="margin: 0 20px;">&middot;</span>
+
+                <div class="inlineBlock posAbs" style="right: 10px;">
+
+                    <!-- Link to Facebook -->
+                    <a href="https://www.facebook.com/spdbetaeta/?fref=ts"><div class="icon z2 inlineBlock flaticon-facebook55 colWhite"></div></a>
+
+                    <!-- Link to Instagram -->
+                    <a href="https://www.instagram.com/spdbh/"><div class="icon z2 inlineBlock flaticon-instagram16 colWhite"></div></a>
+                </div>
             </div>
         </div>
     </div>
+</div>
