--- a/rush.html
+++ b/rush.html
@@ -89,8 +89,8 @@
             As a member of <strong>PGC (Professional Greek Council)</strong> we have access to unique opportunities to help build up a strong
             professional side in any student especially through events we've previously hosted such as 'Ask an Engineer',
             STEM panels, resume reviews, and mock interviews with alumni. Many of our members have received internships while
-            still in school for companies such as <strong>J.P. Morgan, Citi, IBM, Cognizant, UTC, DealerTrack, and Goldman Sachs.</strong> Graduating
-            members have went on to work full-time positions for companies such as <strong>Deutsche Bank, Intel, Cummins, Johnson & Johnson, Motorolla Solutions, IBM</strong>,
+            still in school for companies such as <strong>Goldman Sachs, J.P. Morgan, Citi, IBM, Cognizant, UTC, DealerTrack, and Orbis Systems Inc.</strong> Graduating
+            members have went on to work full-time positions for companies such as <strong>Deutsche Bank, Intel, Cummins, Goldman Sachs, Johnson & Johnson, Motorolla Solutions, IBM</strong>,
             and many more.
 
             <!-- Insert part about encouraged to view alumni testimonies, stop before it is common."
