--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
 <!-- Watermark -->
 <div class="posFix colRed amaranth rightText" style="bottom: 24px;right: 15px;font-size: 12px;">
     <div>Website Designed and Created by</div>
-    <a href="#"><div style="font-size: 16px;">Varun Shivakumar</div></a>
+    <a href="https://www.ic.sunysb.edu/Stu/vshivakumar/" style="text-decoration: none;"><div class="colRed" style="font-size: 16px; ">Varun Shivakumar</div></a>
 </div>
 
 
