Fall 2016 semester update

--- a/events.html
+++ b/events.html
@@ -45,7 +45,18 @@
 <div id="header"></div>
 
 <!-- Content -->
-<div id="grid" class="posRel roboto height100 fontSize20" style="margin: 30px auto 120px auto; min-height: 800px;"></div>
+
+<div id="load" class="centerText width100" style="width:100vw;margin-top:35px;">
+    <img src="images/symbols/loading.gif" class="" height="200px" width="200px"/>
+</div>
+
+<div id="contents">
+    <!-- I don't know why this needs a padding left -> Added bordRed, evens out the DIV -->
+    <div id="data" class="centerText centerDiv" style="padding: 0 0 0 0;">
+        <div id="grid" class="posRel roboto height100 fontSize20" style="margin: 30px auto 120px auto; min-height: 800px;"></div>
+    </div>
+</div>
+
 
 <!-- Footer -->
 <div id="footer" class="posAbs"></div>
