--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
 <div class="shadowTop" style="z-index:1000;">
     <div id="footerBar" class="centerDiv" style="width: 960px;">
         <div class="posRel centerDiv" style="width: 90%; height: 80px;">
-            <div class="posRel inlineBlock width100 centerText adam colRed fontSize18" style="line-height: 80px;">
+            <div class="posRel inlineBlock width100 centerText adam colRed fontSize18 vertCenterMiddle" style="line-height: 80px;">
 
                 <div class="inlineBlock posAbs" style="left: -10px;">
 
