--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 
-<body id="pageone" class="posRel width100 height100 overflowXHidden marg0 pad0 backColBackGround">
+<body id="pageone" class="posRel width100 overflowXHidden marg0 pad0 backColBackGround" style="height:100vh;overflow-y:hidden;">
 
 <!-- Header -->
 <div id="header"></div>
 
 <!-- Content -->
-<div class="posRel width100 centerText overflowHidden width100" style="min-height: 453px;">
+<div class="posRel centerText overflowHidden width100" style="min-height: 680px;">
 
     <div id="ssCont" class="posRel">
         <div id="slideshowBorder"></div>
@@ -119,8 +119,8 @@
                     Learn in detail about these opportunities and how to join Sigma Phi Delta at our RUSH page.
                 </div>
 
-                <a href="rush.html" class="textDecNone">
-                    <div id="rushBtn" class="vertAlignTop centerText inlineBlock">SPRING RUSH 2016</div>
+                <a id="rushBtn" href="rush.html" class="vertCenterMiddle textDecNone vertAlignTop centerText inlineBlock">
+                    <div class="posRel" style="top: 5px;padding: 5px;">FALL RUSH 2016</div>
                 </a>
             </div>
             <div class="blackOverlay"></div>
@@ -154,6 +154,6 @@
 </div>
 
 <!-- Footer -->
-<div id="footer" class="posFix"></div>
+<div id="footer" class="posAbs"></div>
 </body>
 </html>
