--- a/rush.html
+++ b/rush.html
@@ -44,16 +44,18 @@
     <!-- Introduction -->
     <div id="introBlock" style="">
         <!-- Title -->
-        <div id="introTitle" class="inlineBlock amaranth colRed">Why rush Sigma Phi Delta?</div>
+        <div id="introTitle" class="amaranth colRed centerText" style="font-size: 48px;">Why rush Sigma Phi Delta?</div>
 
         <!-- List of Rush Events -->
-        <a id="rushflier" href="images/fliers/spring2016/rush.png"><div id="rushflierimage" class="shadow inlineBlock floatRight vertAlignTop pad0 leftText" style="border: 5px solid #191919;">
+        <a id="rushflier" href="images/fliers/fall2016/fall_rush_2016.jpg">
+            <div id="rushflierimage" class="shadow centerBlock vertAlignTop pad0 leftText" style="border: 5px solid #191919;">
             <!-- Rush Flier -->
-            <img src="images/fliers/spring2016/rush.png" height="100%" width="100%"/>
-        </div></a>
+            <img src="images/fliers/fall2016/fall_rush_2016.jpg" height="100%" width="100%"/>
+        </div>
+        </a>
 
         <!-- Introduction Paragraph -->
-        <div class="fontSize16" style="line-height: 24px; margin-top: 25px;">
+        <div class="fontSize20" style="line-height: 40px; margin: 40px auto 40px auto;">
             As the Premier International Fraternity of Engineers, Sigma Phi Delta and its members boast a strong embrace in the
             <strong>"work hard, play hard"</strong> mentality. With that said, the Beta-Eta Chapter at Stony Brook University proves itself to be
             both a social and professional organization. Rush is an excellent opportunity in which anyone interested in
@@ -72,7 +74,7 @@
                 </div>
             </div>
         </div>
-        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 parMargPad" style="width: 70%;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 parMargPad redBorder" style="width: 70%;">
             No one can truly understand the full perils and workload of a major except those within the major. The members of
             Sigma Phi Delta are all within CEAS (College of Engineering and Applied Sciences), covering a solid breathe of its
             encompassing majors. Members benefit from working along side one another <strong>garnering homework help, study aid, advice
@@ -85,7 +87,7 @@
 
     <!-- Professional Benefits -->
     <div class="centerVert leftText" style="margin: 20px 0 0 0;">
-        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 parMargPad redBorder" style="width: 70%;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 parMargPad" style="width: 70%;">Possibly some of the greatest advantages of membership in Sigma Phi Delta are the career development opportunities.
             As a member of <strong>PGC (Professional Greek Council)</strong> we have access to unique opportunities to help build up a strong
             professional side in any student especially through events we've previously hosted such as 'Ask an Engineer',
             STEM panels, resume reviews, and mock interviews with alumni. Many of our members have received internships while
@@ -120,7 +122,7 @@
                 </div>
             </div>
         </div>
-        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 parMargPad" style="width: 70%; line-height: 28px;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 parMargPad redBorder" style="width: 70%; line-height: 28px;">
             While we highly hold the beliefs of strong academics and profession success we also fully understand the importance
             of experiencing the social opportunities university has to offer, as we are only here for so long. Sigma Phi Delta
             engages in a broad spectrum of social activities such as <strong>intramural sports, collaborated events, tailgates</strong>, and participation
@@ -131,7 +133,7 @@
 
     <!-- Brotherhood -->
     <div class="centerVert leftText" style="margin: 20px 0 0 0;">
-        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 redBorder parMargPad" style="width: 70%; line-height: 32px;">
+        <div class="inlineBlock vertAlignTop fontSize16 lineHeight24 parMargPad" style="width: 70%; line-height: 32px;">
             The most important aspect of Sigma Phi Delta; however, is its <strong>close-knit, diverse brotherhood</strong>. The men of Sigma Phi
                 Delta come from all corners of the country, as well as different areas of the world. Being a member of Sigma Phi
                 Delta not only gives you people to study and hang out with, but gives you <strong>friendships that last a lifetime</strong>
